[package]
name = "tesla-apiscraper-rs"
version = "0.1.0"
edition = "2024"
description = "Self-hosted Tesla vehicle data logger and scraper"

[dependencies]
anyhow = "1"
axum = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
figment = { version = "0.10", features = ["env", "test"] }
influxdb = { version = "0.7", features = ["derive", "use-serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
http-body-util = "0.1"
tower = "0.5"
