[package]
name = "tesla-apiscraper-rs"
version = "0.1.0"
edition = "2024"
description = "Self-hosted Tesla vehicle data logger and scraper"

[dependencies]
aes-gcm = "0.10"
anyhow = "1"
axum = "0.8.9"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
figment = { version = "0.10", features = ["env", "test"] }
hex = "0.4"
influxdb = { version = "0.7", features = ["derive", "use-serde"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.11", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", features = ["test-util"] }
tower = "0.5"
wiremock = "0.6"
